AS#152122905738626, Files upload: dragging/dropping incorrect file leads to overlap with help text -- Fixed, with catch been that 'or' keyword is not removed in case of file type does not match the required types because we don't get the event from filestack for this case.

--- a/assets/css/directives/tc-fp-file-input.directive.scss
+++ b/assets/css/directives/tc-fp-file-input.directive.scss
@@ -40,33 +40,28 @@ tc-fp-file-input {
 
   .tc-fp-file-drag-drop {
     width: calc(100% - 4px);
-    position: absolute;
     left: 0;
     top: 0;
     height: 190px;
     width: 240px;
     position: relative;
+    color: $tc-gray-50 !important;
+    padding: 25px !important;
+    text-align: center;
 
+    // div used to show progress bar for drop upload
+    > div {
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+
+    // span used for showing remove button
     > span {
       position: absolute;
       top: 0px;
       right: 0px;
     }
-  }
-
-  .tc-fp-file-drag-drop::after {
-    content: 'Drag and drop your .zip file here (500MB max)';
-    color: $tc-gray-50;
-    top: 25px;
-    position: absolute;
-    width: 198px;
-    text-align: center;
-    left: 50%;
-    transform: translateX(-50%)
-  }
-
-  .tc-fp-file-drag-drop-image::after {
-    content: 'Drag and Drop your PNG or JPG file here';
   }
 
   &.file-uploaded {
